# monad

./: .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  REVIEW.md
.claude/commands/: build.md  format.md  fuzz.md  lint.md  test.md
.github/workflows/: claude.yml  code-quality.yml  docker-base.yaml  docker.yaml  license.sh  license.yml  publish-execution.yml  rust.yml  test-vm.yml  test-zk.yml
category/async/: CMakeLists.txt  config.hpp  connected_operation.hpp  erased_connected_operation.hpp  io.cpp  io.hpp  io_senders.hpp  sender_errc.hpp  storage_pool.cpp  storage_pool.hpp
category/core/: CMakeLists.txt  address.hpp  address_test.cpp  assert.c  assert.h  assume.h  backtrace.cpp  backtrace.hpp  backtrace_test.cpp  basic_formatter.hpp  bytes.hpp  bytes_literal_test.cpp  bytes_test.cpp  cases.hpp  format_err.c  format_err.h  hex.cpp  hex.hpp  hex_test.cpp  int.hpp  keccak_impl.S  log.cpp  log.hpp  log_ffi.cpp  log_ffi_test.cpp  monad_exception.cpp  monad_exception_test.cpp  path_util.c  path_util.h  path_util_test.cpp  small_prng.hpp  thread_local.h  throw.hpp
category/event/: CMakeLists.txt  Config.cmake.in
category/event/example/: eventwatch.c
category/execution/: CMakeLists.txt
category/mpt/: CMakeLists.txt  cli_tool_impl.cpp  cli_tool_main.cpp  compute.cpp  compute.hpp  copy_trie.cpp  db.cpp  db.hpp  db_metadata_context.cpp  db_metadata_context.hpp  deserialize_node_from_receiver_result.hpp  find.cpp  find_notify_fiber.cpp  find_request_sender.hpp  nibbles_view.hpp  nibbles_view_fmt.hpp  node.cpp  node.hpp  node_cursor.hpp  ondisk_db_config.hpp  read_node_blocking.cpp  request.hpp  state_machine_kind.cpp  state_machine_kind.hpp  traverse.hpp  traverse_util.hpp  trie.cpp  trie.hpp  update_aux.cpp  upward_tnode.hpp  util.hpp
category/rpc/: CMakeLists.txt  chain_context_buffer.cpp  chain_context_buffer.hpp  eth_simulate_block_hash_buffer.cpp  eth_simulate_block_hash_buffer.hpp  lazy_block_hash.cpp  lazy_block_hash.hpp  monad_executor.cpp  monad_executor.h  monad_executor_test.cpp  overrides.cpp  overrides.h  overrides.hpp
category/statesync/: statesync_client.cpp  statesync_client_context.cpp  statesync_client_context.hpp  statesync_protocol.cpp  statesync_server.cpp  statesync_server_context.cpp  statesync_server_context.hpp  statesync_server_network.hpp  statesync_thread.hpp
category/vm/: CMakeLists.txt  README.md  code.hpp  compiler.cpp  compiler.hpp  host.hpp  memory_pool.cpp  memory_pool.hpp  varcode_cache.cpp  varcode_cache.hpp  vm.cpp  vm.hpp
category/vm/compiler/: CMakeLists.txt  transactional_unordered_map.hpp  types.hpp
category/vm/compiler/ir/: basic_blocks.cpp  basic_blocks.hpp  instruction.hpp  x86.cpp  x86.hpp
category/vm/compiler/ir/x86/: emitter.cpp  emitter.hpp  types.hpp  virtual_stack.cpp  virtual_stack.hpp
cmake/: blst.cmake  compile_options.cmake  evmone.cmake  test.cmake  test_resource_data.h.in  zkvm.cmake
cmd/: CMakeLists.txt  monad_cli.cpp
cmd/monad/: event.cpp  file_io.cpp  main.cpp  runloop_ethereum.cpp  runloop_ethereum.hpp  runloop_monad.cpp  runloop_monad_ethblocks.cpp  wal_reader.cpp  wal_reader.hpp
docker/: Dockerfile  release-fast.Dockerfile
docs/: page_store_migration_runbook.md
rust/: Cargo.toml  rust-toolchain.toml
rust/crates/monad-build/: Cargo.toml
rust/crates/monad-build/src/: bindgen.rs  cmake.rs  lib.rs
rust/crates/monad-cxx/: Cargo.toml  build.rs  wrapper.h
rust/crates/monad-cxx/src/: error.rs  ffi.rs  lib.rs
rust/crates/monad-ethcall/: Cargo.toml  build.rs  wrapper.h
rust/crates/monad-ethcall/src/: ffi.rs  lib.rs
rust/crates/monad-event-ring/: Cargo.toml  build.rs
rust/crates/monad-event-ring/benches/: snapshot_raw.rs
rust/crates/monad-event-ring/examples/: hexdump.rs
rust/crates/monad-event-ring/src/: ffi.rs  lib.rs  path.rs
rust/crates/monad-event-ring/src/descriptor/: mod.rs  raw.rs
rust/crates/monad-event-ring/src/reader/: mod.rs
rust/crates/monad-event-ring/src/ring/: mod.rs  snapshot.rs
rust/crates/monad-exec-events/: Cargo.toml  build.rs  wrapper.h
rust/crates/monad-exec-events/benches/: snapshot_exec.rs
rust/crates/monad-exec-events/examples/: blockdump.rs  blockdump_simple.rs  eventwatch.rs  explorer.rs
rust/crates/monad-exec-events/src/: block.rs  ffi.rs  lib.rs  reader.rs
rust/crates/monad-exec-events/src/block_builder/commit_state/: mod.rs
rust/crates/monad-exec-events/src/block_builder/executed/: mod.rs  state.rs
rust/crates/monad-exec-events/src/events/: bytes.rs  mod.rs
rust/crates/monad-exec-events/test/data/exec-events-emn-30b-15m/: 0.header.json  0.monad-header.json  0.tx-receipt.0.json  0.tx.0.json
rust/crates/monad-statesync/: Cargo.toml  build.rs  wrapper.h
rust/crates/monad-statesync/src/: ffi.rs  lib.rs
rust/crates/monad-triedb/: CMakeLists.txt  Cargo.toml  README.md  build.rs
rust/crates/monad-triedb/include/: ffi.h
rust/crates/monad-triedb/src/: ffi.cpp  ffi.rs  lib.rs  traverse.rs
rust/crates/monad-triedb/triedb-driver/: CMakeLists.txt
rust/crates/monad-triedb/triedb-driver/include/: triedb.h
rust/crates/monad-triedb/triedb-driver/src/: triedb.cpp
scripts/: apply-clang-format.sh  build.sh  check-clang-tidy.sh  configure.sh  page_commit_reference.py  test.sh
scripts/ubuntu-build/: install-boost.sh  install-deps.sh  install-riscv-deps.sh  install-tools.sh  install-zisk-deps.sh
scripts/vm/: build-tests.sh  test.sh
test/ethereum_test/: CMakeLists.txt
test/ethereum_test/exclude/: MONAD_EIGHT.cmake  MONAD_NINE.cmake  berlin.cmake  byzantium.cmake  cancun.cmake  constantinoplefix.cmake  istanbul.cmake  london.cmake  osaka.cmake  paris.cmake  prague.cmake  shanghai.cmake
test/ethereum_test/include/: blockchain_test.hpp  from_json.hpp  revision_map.hpp  transaction_test.hpp
test/ethereum_test/src/: blockchain_test.cpp  event.cpp  from_json.cpp  main.cpp  transaction_test.cpp
test/utils/: CMakeLists.txt  from_json.cpp  from_json.hpp  json_state.cpp  json_state.hpp  test_state.hpp
test/vm/: CMakeLists.txt
utils/clang-tidy-auto-const/: CMakeLists.txt
zkvm/guest/: CMakeLists.txt
(+491 files in other folders)
