[workspace]
resolver = "2"
members = ["crates/*"]

[profile.release]
debug = true
lto = "thin"
panic = "abort"

[workspace.metadata.cargo-shear]
ignored = [
    "monad-cxx",
    "monad-exec-events",
]

[workspace.dependencies]
monad-cxx = { path = "./crates/monad-cxx" }
monad-event-ring = { path = "./crates/monad-event-ring" }
monad-exec-events = { path = "./crates/monad-exec-events" }

alloy-consensus  = { version = "1.7",     default-features = false }
alloy-eips       = { version = "1.7",     default-features = false }
alloy-primitives = { version = "1.5",     default-features = false }
alloy-rpc-types  = { version = "1.7",     default-features = false, features = ["eth"] }
bindgen          = { version = "0.71.1",  default-features = false, features = ["logging", "runtime"] }
cc               = { version = "1.2.27",  default-features = false }
chrono           = { version = "0.4.34",  default-features = false, features = ["std", "clock"] }
clap             = { version = "4.2",     default-features = false }
cmake            = { version = "0.1",     default-features = false }
criterion        = { version = "0.8",     default-features = false, features = ["html_reports"] }
hex              = { version = "0.4",     default-features = false, features = ["std"] }
itertools        = { version = "0.10",    default-features = false, features = ["use_std"] }
lazy_static      = { version = "1.5.0",   default-features = false }
libc             = { version = "0.2.153", default-features = false }
ratatui          = { version = "0.30.0",  default-features = false, features = ["crossterm"] }
serde            = { version = "1.0",     default-features = false }
serde_json       = { version = "1.0",     default-features = false }
strum            = { version = "0.27",    default-features = false, features = ["derive"] }
tracing          = { version = "0.1",     default-features = false }
