[package]
name = "monad-event-ring"
description = "Rust API for monad event rings"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
criterion = { workspace = true }
itertools = { workspace = true }

[build-dependencies]
monad-build = { workspace = true, features = ["bindgen-static", "cmake", "metadata"] }

build-rs = { workspace = true }

[[bench]]
name = "snapshot_raw"
harness = false
